# insur_rag

./: .gitignore  main.py  main_evals.py  pyproject.toml
evals/: answer_evaluation.py  load_tests.py  models.py  retrieval_evaluation.py
src/: rag_app.py  vector_store.py
