[project]
name = "insur-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.12.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "litellm>=1.83.7",
    "pydantic>=2.12.5",
    "ruff>=0.15.9",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 100
